# AlbionCraftCalculator

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
actions-runner/: .credentials  .credentials_rsaparams  .runner  .service
data/: test_schema.db
data/logs/: data_changes.csv  import_runs.csv
data/manifests/: IMPORT-ITEMS-20260409-104132.json  IMPORT-ITEMS-20260410-072900.json  IMPORT-MARKET_PRICES-20260409-105056.json  IMPORT-MARKET_PRICES-20260410-072913.json  fallback_test.jsonl
decisions/: DEC-0001.md  DEC-0002.md  DEC-0003-agent-topology-audit.md  DEC-0004-agent-refactor-plan.md  DEC-0005-agent-operating-model.md  DEC-0006-coder-architecture-rules.md  DEC-0007-feedback-loop.md
handoff/: ACTIVE_CONTEXT.md  MASTER_PROMPT.md  SESSION_TEMPLATE.md  WORKLOG.md
input/: request.md
knowledge/: craft_calculator_sprint_01.md  operator_playbook.md
output/: code_report.md  lead_report.md  research_report.md  test_report.md  validator_report.md
prompts/: reviewer_checklist.md
reference/: focus_rules.csv  market_fees.csv
reports/AGENT-PROBE-20260410-121626/: factory_coder.json  (+27 more)
requests/: REQ-0002.md  REQ-0004.md  REQ-0006.md  _template.md
runs/: index.csv
scripts/: import_items.py  import_prices.py  probe_agents.py  run_request_phase.py  score_agent_probe.py
sql/: 001_create_core_tables.sql
tests/: test_comparison_engine_smoke.py  test_craftcalc_models_smoke.py  test_price_resolver_smoke.py  test_probe_agents_smoke.py  test_profit_engine_smoke.py  test_recipe_resolver_smoke.py  test_score_agent_probe_smoke.py
(+335 files in other folders)
