[project]
name = "albion_factory"
version = "0.1.0"
description = "albion_factory using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=1.14.0",
    "crewai[google-genai,tools]>=1.14.1",
    "psycopg[binary]>=3.2.0",
]

[project.scripts]
albion_factory = "albion_factory.main:run"
run_crew = "albion_factory.main:run"
train = "albion_factory.main:train"
replay = "albion_factory.main:replay"
test = "albion_factory.main:test"
run_with_trigger = "albion_factory.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
